# ant

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  README.txt  SECURITY.md  ant.txt  flake.nix  maidfile.toml  meson.build  meson_options.txt  package.json  radix3.js  shell.nix  sources.json  test_array_comprehensive.js  test_define_property.js  test_define_property_edge_cases.js  test_define_property_simple.js  test_define_property_strict.js  test_minimal.cjs  tsconfig.json
.depot/workflows/: build-musl-sandboxes.yml  build-nanos.yml  build-platform.yml  build-single.yml  build.yml  repo-knowledge.yml
.github/: VOUCHED.td  download.sh  versions.json
.github/agents/: check_all.js  check_repo_knowledge.js  check_repo_structure.js  route_validation.js  util_repo_root.js
.github/install/: install.ab  install.sh
.github/workflows/: build-linux-glibc-aarch64.yml  build-linux-glibc-x64.yml  build-linux-musl-aarch64.yml  build-linux-musl-x64.yml  build-macos-aarch64-mbedtls.yml  build-macos-aarch64.yml  build-macos-x64-mbedtls.yml  build-macos-x64.yml  build-musl-sandboxes.yml  build-nanos-kernel.yml  build-nanos.yml  build-platform.yml  build-single.yml  build-windows-x64.yml  build.yml  nix-cache.yml  refresh-manifest-release.yml  refresh-release-notes.yml  repo-knowledge.yml
docs/api/: .gitignore  ant.lockb  package.json  tsconfig.json  wrangler.toml
docs/exec-plans/: index.md  tech-debt.md
docs/repo/: index.md  testing.md
docs/reports/: .gitignore  ant.lockb  package.json  wrangler.toml
examples/: advanced.js  events.js  fibonacci.js  graph.js  midi2bells.js  quirks.txt  results.txt  uuid.min.js
examples/ant-desktop/: package.json
examples/bench-v8/: harness.js  index.js  score.json
examples/demo/: advanced.js  atomics.js  build.js  bunny.js  destr.js  ephemeral_server.js  event_loop.js  events.js  extra.js  fetch.js  fibonacci.js  fibonacci_iterative.js  fibonacci_iterative_tco.js  fibonacci_iterative_tco_double.js  fibonacci_iterative_tco_number.js  fibonacci_memo.js  fibonacci_recursive.js  fibonacci_tco.js  fizzbuzz.js  highlight.js  kat.js  mandelbrot.js  match.js  microbench.js  microbench2.js  microbuzz.js  nancoding.js  nano.js  net.cjs  pi.js  readline.js  remote.js  sandbox.js  server.cjs  signals.js  symbols.js  tco_fib.js  triples.js  uptime.js  wasm.js  (+2 more)
examples/embed/: embed.c
examples/jit/: bailout.js  closures.js  exceptions.js  generate_jit.js  objects.js  ops.js  osr.js  run.js  stress.js  type_feedback.js
examples/jsondb/: index.js  jsondb.js
examples/rou3/: bench.js  index.js
examples/rpc/: client.js  server.js
examples/server/: html.js  radix3.js  server.js
examples/spa/: index.html  server.js  server.ts
examples/spec/: ant.js  arrays.js  arrow.js  assert.js  async.js  async_iterators.js  async_loops.js  atomics.js  base64.js  bigint.js  blob.js  buffer.js  child_process.js  class_computed_key.js  classes.js  completion.js  console.js  crypto.js  dataview.js  date.js  delete.js  destructuring.js  devirtualization.js  diagnostics_channel.js  escapes.js  eval_scopes.js  events.js  eventsource.js  exceptions.js  explicit_resource_management.js  fetch.js  finalizationregistry.js  forin.js  formdata.js  fs.js  fs_async.js  functions.js  generators.js  getters.js  globalthis.js  (+64 more)
examples/test262/: README.txt  ant.json  bench.js  index.js
examples/tui/: button.js  docker.js  index.js  mouse.js  test.js  tuey.js
examples/wasm/: demo.sh  index.mjs
examples/whisp/: index.ts  parser.ts  types.ts  whisp.ts
include/: ant.h  arena.h  base64.h  common.h  compat.h  compile.h  config.h  config.h.in  crash.h  debug.h  descriptors.h  errors.h  escape.h  gc.h  highlight.h  inspector.h  internal.h  numbers.h  object.h  output.h  oxc.h  pkg.h  pool.h  progress.h  ptr.h  reactor.h  readline.h  regex_scan.h  repl.h  roots.h  runtime.h  shapes.h  slab.h  snapshot.h  stack.h  strings.h  sugar.h  tokens.h  tty_ctrl.h  types.h  (+3 more)
include/cli/: cprintf.h  crprintf.h  misc.h  pkg.h  registry.h  version.h
include/esm/: builtin_bundle.h  commonjs.h  exports.h  (+3 more)
libant/: example.sh  meson.build  meson_options.txt
libant/scripts/: bundle.sh  common.sh  compile.sh  deps.sh  header.sh
meson/: ant.entitlements  ant.version  meson.build  messages.py  npm_ci.py  sources.py  theme.py
meson/builtins/: meson.build
meson/pgo/: build.sh  train_server.js
meson/pgo/profiles/: ant-darwin-aarch64.profdata
meson/snapshot/: meson.build
meson/version/: meson.build
nanos/: Dockerfile  build-sandbox.sh
nix/: package.nix  vendor.nix
src/: ant.c  base64.c  crash.c  debug.c  descriptors.c  errors.c  escape.c  gc.c  highlight.c  main.c  numbers.cc  output.c  pool.c  reactor.c  readline.c  repl.c  roots.c  runtime.c  shapes.c  snapshot.c  stack.c  strings.c  sugar.c  tty_ctrl.c  utf8.c  utils.c  watch.c
src/strip/: Cargo.toml  oxc.h  oxc.rs
src/strip/.cargo/: config.toml
src/strip/src/: collector.rs  ffi.rs  lib.rs  strip.rs
subprojects/: minicoro.wrap  mongoose.wrap  tlsuv.wrap
subprojects/packagefiles/mongoose/: meson.build
tests/: __proto__.js  ack.js  analyze_closure.cjs  array_methods.cjs  arrays.cjs  arrow_functions.cjs  await_reactpromise_shape.mjs  await_thenable.mjs  bench.js  bench_array_create.js  bench_array_from.js  bench_bigint.js  bench_bigint_toString.js  bench_call_fallback.js  bench_const_eq.js  bench_context_construction.cjs  bench_crypto.cjs  bench_dec.js  bench_delete.js  bench_dense.js  bench_dict.js  bench_epoch.js  bench_forin_object_keys.js  bench_gc.js  bench_gc_mark_func.js  bench_global_access.cjs  bench_includes_breakdown.cjs  bench_includes_dense.cjs  bench_includes_generic_proxy.cjs  bench_includes_sparse.cjs  bench_inobj_props.js  bench_jit_captured_local_bailout.cjs  bench_jit_captured_param_bailout.cjs  bench_jit_constructor_shape.cjs  bench_jit_deopt.js  bench_jit_import_named.mjs  bench_jit_import_named_source.mjs  bench_jit_jmp_not_nullish.cjs  bench_jit_method_inlining.js  bench_jit_missing_params.cjs  (+622 more)
(+639 files in other folders)
