option('jit', type: 'boolean', value: true, description: 'enable JIT compiler')
option('static_link', type: 'boolean', value: false, description: 'statically link the binary')
option('linker_map', type: 'boolean', value: false, description: 'emit a linker map for the ant binary')
option('codesign', type: 'boolean', value: true, description: 'codesign the Ant binary on Darwin')
option('embed_example', type: 'feature', value: 'auto', description: 'configure to build the libant embed example')
option('build_timestamp', type: 'string', value: '', description: 'build timestamp (defaults to current time if empty)')
option('build_git_hash', type: 'string', value: '', description: 'git hash for version metadata (defaults to git rev-parse if empty)')
option('deps_prefix_cmake', type: 'string', value: '', description: 'prefix path for finding dependencies in cmake subprojects')
